--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sweetalert2": "^11.17.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
