--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "exceljs": "^4.4.0",
     "next": "15.2.1",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
